example/k8s/output/helm-output.yaml
---
# Source: ingress-headers/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      add_header X-Permitted-Cross-Domain-Policies "none";
      add_header Example-String "foo";
      add_header Example-List "bar baz";
      add_header Content-Security-Policy "connect-src 'self' *.privacy-service.org *.trust-service.com https://*.analytics-service.net/ https://*.service.com https://*.feedback-service.com https://edge.analytics-cloud.net/ https://company.personalization-service.net/ https://metrics.company.com/; default-src 'self' 'unsafe-inline' *.company.com *.service.com; font-src 'self' *.feedback-service.com data: https://*.company.com; frame-ancestors 'self'; frame-src 'self' *.trust-service.com https://* [...]
      add_header Feature-Policy "camera 'none'; encrypted-media 'none'; geolocation 'none'; microphone 'none'; payment 'none'; speaker 'none'; usb 'none'";
      add_header Referrer-Policy "no-referrer";
      add_header Report-To "{ \"group\": \"csp-endpoint\", \"max-age\": 10886400, \"endpoints\": [{ \"url\": \"https://example.com/csp-reporting\"}] }";
      add_header X-Content-Type-Options "nosniff";
      add_header X-DNS-Prefetch-Control "off";
      add_header X-Download-Options "noopen";
      add_header X-Frame-Options "deny";
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels: 
    description: vitiate
    chart: ingress-headers-ingress
  name: "vitiate"
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80
